--- a/assets/style/font.css
+++ b/assets/style/font.css
@@ -40,4 +40,69 @@
   .icon-linkedin2:before {
     content: "\eaca";
   }
+
+  /* pt-sans-regular - latin */
+  @font-face {
+    font-family: 'PT Sans';
+    font-style: normal;
+    font-weight: 400;
+    src: url('../fonts/pt-sans-v12-latin-regular.eot');
+    /* IE9 Compat Modes */
+    src: local(''),
+      url('../fonts/pt-sans-v12-latin-regular.eot?#iefix') format('embedded-opentype'),
+      /* IE6-IE8 */
+      url('../fonts/pt-sans-v12-latin-regular.woff2') format('woff2'),
+      /* Super Modern Browsers */
+      url('../fonts/pt-sans-v12-latin-regular.woff') format('woff');
+  }
+
+  /* pt-sans-700 - latin */
+  @font-face {
+    font-family: 'PT Sans';
+    font-style: normal;
+    font-weight: 700;
+    src: url('../fonts/pt-sans-v12-latin-700.eot');
+    /* IE9 Compat Modes */
+    src: local(''),
+      url('../fonts/pt-sans-v12-latin-700.eot?#iefix') format('embedded-opentype'),
+      /* IE6-IE8 */
+      url('../fonts/pt-sans-v12-latin-700.woff2') format('woff2'),
+      /* Super Modern Browsers */
+      url('../fonts/pt-sans-v12-latin-700.woff') format('woff');
+
+  }
+
+  /* pt-sans-italic - latin */
+  @font-face {
+    font-family: 'PT Sans';
+    font-style: italic;
+    font-weight: 400;
+    src: url('../fonts/pt-sans-v12-latin-italic.eot');
+    /* IE9 Compat Modes */
+    src: local(''),
+      url('../fonts/pt-sans-v12-latin-italic.eot?#iefix') format('embedded-opentype'),
+      /* IE6-IE8 */
+      url('../fonts/pt-sans-v12-latin-italic.woff2') format('woff2'),
+      /* Super Modern Browsers */
+      url('../fonts/pt-sans-v12-latin-italic.woff') format('woff');
+  }
+
+
+  @font-face {
+    font-family: 'Proxima Nova Bold';
+    src: url('../fonts/ProximaNova-Bold.eot');
+    src: url('../fonts/ProximaNova-Bold.eot?#iefix') format('embedded-opentype'),
+      url('../fonts/ProximaNova-Bold.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'Proxima Nova Semibold';
+    src: url('../fonts/ProximaNova-Semibold.eot');
+    src: url('../fonts/ProximaNova-Semibold.eot?#iefix') format('embedded-opentype'),
+      url('../fonts/ProximaNova-Semibold.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+  }
   
