--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -10,12 +10,6 @@ body{
     background-color: #ebebeb;
 }
 
-header{
-    width: 100%;
-    height: 120px;
-    position: fixed;
-}
-
 .title{
     text-transform: uppercase;
     font-size: rem(36px);
@@ -38,22 +32,168 @@ header{
    margin: 0 auto;
    background: transparent;
    outline: none;
+   -webkit-transition: all .3s;
+   -o-transition: all .3s;
    transition: all .3s;
 }
 
-.header{
+.to_top {
+    display: none;
+    position: fixed;
+    right: 30px;
+    bottom: 40px;
+    width: 85px;
+    height: 85px;
+    text-align: center;
+    background-color: rgba($color: $font-color-purple, $alpha: .4);
+    font-weight: 700;
+    z-index: 999;
+    -webkit-transition: .2s;
+    -o-transition: .2s;
+    transition: .2s;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    &:hover {
+        background-color: rgba($color: $font-color-purple, $alpha: 1.0);  
+    }
+    span{
+        display: block;
+        width: 26px;
+        height: 26px;
+        border-bottom: 2px solid $font-color-white;
+        border-left: 2px solid $font-color-white;
+        -webkit-transform: rotate(135deg);
+            -ms-transform: rotate(135deg);
+                transform: rotate(135deg);
+    }
+
+}
+
+.btn_active {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+}
+
+.hamburger{
+    display: none;
+}
+
+#mobile_shadow {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: none;
+    background: rgb(30, 109, 166);
+    background: -o-linear-gradient(320deg, rgba(30, 109, 166, 0.3757878151260504) 3%, rgba(74, 57, 134, 0.2665441176470589) 95%);
+    background: linear-gradient(130deg, rgba(30, 109, 166, 0.3757878151260504) 3%, rgba(74, 57, 134, 0.2665441176470589) 95%);
+    -webkit-backdrop-filter: blur(3px);
+    backdrop-filter: blur(3px);
+    z-index: 1002;
+    -webkit-transition: all .4s;
+    -o-transition: all .4s;
+    transition: all .4s;
+}
+
+.open_shadow {
+    &#mobile_shadow {
+        display: block;
+    }
+}
+
+.mobile_menu {
+    position: fixed;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    top: 0;
+    left: -110%;
+    height: 100vh;
+    width: 90%;
+    max-width: 320px;
+    background: $font-color-purple;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -ms-flex-pack: distribute;
+    justify-content: space-around;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
+    z-index: 1003;
+    -webkit-transition: all .4s;
+    -o-transition: all .4s;
+    transition: all .4s;
+    .header_menu-list {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
+        height: 60%;
+        -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+        justify-content: space-between;
+        text-align: center;
+
+    }
+    header_menu-item {
+        a {
+            letter-spacing: 4px;
+        }
+    }
+}
+
+.open_menu {
+    &.mobile_menu {
+        left: 0;
+    }
+}
+
+header {
+    width: 100%;
+    height: 120px;
+    position: fixed;
+    z-index: 999;
+    -webkit-transition: .1s;
+    -o-transition: .1s;
+    transition: .1s;
+}
+
+.header{
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     height: 100%;
     padding: 0 30px;
+    -webkit-transition: .3s;
+    -o-transition: .3s;
+    transition: .3s;
     &_logo{
-
         svg{
             fill: #fff;
         }
     }
     &_menu-list{
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
     }
     &_menu-item{
@@ -66,14 +206,34 @@ header{
             font-family: 'Proxima Nova Semibold', sans-serif;
             color: $font-color-white;
             font-size: rem(24px);
+            -webkit-transition: all .3s;
+            -o-transition: all .3s;
             transition: all .3s;
             outline: none;
-            &:hover, &:focus{
+            &:hover{
                 color: $font-color-black;
             }
         }
     }
 }
+
+.Header {
+    background: rgba($color: $font-color-purple, $alpha: .4);
+    -webkit-backdrop-filter: blur(2px);
+    backdrop-filter: blur(2px);
+    height: 60px;
+}
+
+.mobile-header {
+    width: 90%;
+    height: 60px;
+    .header_logo{
+        svg{
+            height: 40px;
+        }
+    }
+}
+
 
 .big-screen{
     padding: 400px 0 514px;
@@ -100,19 +260,26 @@ header{
 .about{
     padding: 124px 0 120px;
     &_content-wrap{
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
     }
     &_image-block{
         width: calc(32.47%);
-        max-width: 380px;
+        // max-width: 380px;
         position: relative;
         &_text_inner{
             position: absolute;
-            top: 12.7%;
-            left: 35%;
-            transform: translate(-12.7%, -50%);
+            top: 30%;
+            left: 50%;
+            -webkit-transform: translate(-50%, -50%);
+                -ms-transform: translate(-50%, -50%);
+                    transform: translate(-50%, -50%);
             z-index: 1;
             text-align: center;
         }
@@ -244,15 +411,23 @@ header{
     }
     .prev_slide{
         top: 50%;
-        transform: translateY(-50%);
+        -webkit-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
+                transform: translateY(-50%);
         left: 8%;
-        transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
+            -ms-transform: rotate(45deg);
+                transform: rotate(45deg);
     }
     .next_slide {
         top: 50%;
-        transform: translateY(-50%);
+        -webkit-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
+                transform: translateY(-50%);
         right: 8%;
-        transform: rotate(-135deg);
+        -webkit-transform: rotate(-135deg);
+            -ms-transform: rotate(-135deg);
+                transform: rotate(-135deg);
     }
 }
 
@@ -312,22 +487,30 @@ header{
     }
     .prev_slide {
         top: 50%;
-        transform: translateY(-50%);
+        -webkit-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
+                transform: translateY(-50%);
         left: 3%;
-        transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
+            -ms-transform: rotate(45deg);
+                transform: rotate(45deg);
     }
     .next_slide {
         top: 50%;
-        transform: translateY(-50%);
+        -webkit-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
+                transform: translateY(-50%);
         right: 3%;
-        transform: rotate(-135deg);
+        -webkit-transform: rotate(-135deg);
+            -ms-transform: rotate(-135deg);
+                transform: rotate(-135deg);
     }
     
 }
 
 .member{
-    width: 90%;
-    max-width: 350px;
+    width: 350px;
+    // max-width: 350px;
     &_info-wrap{
         padding-top: 150px;
         padding-bottom: 45px;
@@ -358,9 +541,15 @@ header{
         // margin-bottom: 50px;
     }
     &_soc-list{
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content: space-between;
-        align-items: center;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         background-color: $font-color-purple;
         height: 70px;
         padding: 0 45px;
@@ -371,6 +560,8 @@ header{
         border-radius: 50%;
         background-color: #fff;
         line-height: 32px;
+        -webkit-transition: .2s;
+        -o-transition: .2s;
         transition: .2s;
         i{
             color: $font-color-purple;
@@ -405,9 +596,14 @@ header{
     }
     &_form{
         width: 100%;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content: space-between;
-        flex-wrap: wrap;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
         margin-bottom: 55px;
     }
     &_input-wrap {
@@ -437,7 +633,9 @@ header{
         font-family: 'PT Sans', sans-serif;
         left: 5%;
         top: 50%;
-        transform: translateY(-50%);
+        -webkit-transform: translateY(-50%);
+            -ms-transform: translateY(-50%);
+                transform: translateY(-50%);
         
     }
     &_star{
@@ -477,6 +675,8 @@ header{
         color: $font-color-white;
         font-family: 'Proxima Nova Bold', sans-serif;
         font-size: rem(20px);
+        -webkit-transition: .3s;
+        -o-transition: .3s;
         transition: .3s;
         cursor: pointer;
         &:hover, &:focus{
@@ -488,22 +688,33 @@ header{
         width: 90%;
         max-width: 347px;
         height: 90px;
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
         position: absolute;
-        right: -19.5%;
+        right: 0%;
         top: 25%;
+        -webkit-transition: .4s;
+        -o-transition: .4s;
         transition: .4s;
         cursor: pointer;
+        -webkit-transform: translateX(74%);
+            -ms-transform: translateX(74%);
+                transform: translateX(74%);
         &.phone{
             top: 34.9%;
             &:hover, &:focus{
-                right: 0;
+                -webkit-transform: translateX(0);
+                    -ms-transform: translateX(0);
+                        transform: translateX(0);
             }
         }
         &.address{
             &:hover,
             &:focus {
-                right: 0;
+                -webkit-transform: translateX(0);
+                    -ms-transform: translateX(0);
+                        transform: translateX(0);
             }
         }        
 
@@ -511,9 +722,15 @@ header{
             width: 90px;
             height: 100%;
             background-color: $font-color-purple;
+            display: -webkit-box;
+            display: -ms-flexbox;
             display: flex;
-            justify-content: center;
-            align-items: center;
+            -webkit-box-pack: center;
+                -ms-flex-pack: center;
+                    justify-content: center;
+            -webkit-box-align: center;
+                -ms-flex-align: center;
+                    align-items: center;
             img{
                 height: 36px;
                 width: 40px;
@@ -526,9 +743,15 @@ header{
             width: 257px;
             height: 100%;
             background-color: rgba($color: $font-color-white, $alpha: .4);
+            display: -webkit-box;
+            display: -ms-flexbox;
             display: flex;
-            align-items: center;
-            justify-content: center;
+            -webkit-box-align: center;
+                -ms-flex-align: center;
+                    align-items: center;
+            -webkit-box-pack: center;
+                -ms-flex-pack: center;
+                    justify-content: center;
             padding: 0 20px;
             a{
                 font-size: rem(18px);
@@ -557,9 +780,15 @@ header{
     height: 185px;
     background: $font-color-purple;
     &_container{
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        justify-content: space-between;
-        align-items: center;
+        -webkit-box-pack: justify;
+            -ms-flex-pack: justify;
+                justify-content: space-between;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
         height: 100%;
         max-width: 1110px;
     }
@@ -576,4 +805,125 @@ header{
     .member_soc-item{
         text-align: center;
     }   
+}
+
+@media screen and (max-width: 960px){
+    .about{
+        padding: 90px 0 80px;
+        &_content-wrap{
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+                -ms-flex-direction: column;
+                    flex-direction: column;
+            -webkit-box-pack: center;
+                -ms-flex-pack: center;
+                    justify-content: center;
+        }
+        &_image-block{
+            width: 100%;
+            text-align: center;
+        }
+        &_text-block{
+            width: 100%;
+            text-align: center;
+        }
+    }
+}
+
+@media screen and (max-width:800px){
+    .hamburger{
+        display: block;
+    }
+    .header_menu-list{
+        display: none;
+    }
+    .services{
+        &_list{
+            grid-template-columns: repeat(2, 1fr);
+            grid-template-rows: repeat(3, 1fr);
+        }
+        &_item.big{
+            grid-column: 1 / span 2;
+            grid-row: 2 / 3;
+        }
+    }
+    .to_top{
+        width: 40px;
+        height: 40px;
+        span{
+            width: 12px;
+            height: 12px;
+        }
+    }
+}
+
+@media screen and (max-width: 600px){
+    .big-screen{
+        padding: 200px 0 250px;
+    }
+    .works{
+        &_slider-item{
+            height: 400px;
+        }
+        .prev_slide, .next_slide{
+            display: none;
+        }
+
+    }
+    .footer_container{
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+    }
+    .contact_input-wrap{
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 550px){
+    .services {
+        &_list {
+            grid-template-columns: 1fr;
+            grid-template-rows: repeat(5, 1fr);
+        }
+        &_item{
+            &.design{
+                grid-row: 1 / 2;
+            }
+            &.development{
+                grid-row: 2 / 3;
+            }
+            &.seo{
+                grid-row: 3 / 4;
+            }
+            &.mobile{
+                grid-row: 4 / 5;
+            }
+            &.big{
+                grid-row: 5 / 6;
+            }
+        }
+    }
+    .team{
+        .prev_slide, .next_slide{
+            display: none;
+        }
+    }
+    .big-screen_title{
+        font-size: rem(48px);
+    }
+}
+
+@media screen and (max-width: 450px){
+    .works_slider-item{
+        height: 320px;
+    }
+}
+
+@media screen and (max-width: 320px){
+    .works_slider-item {
+        height: 280px;
+    }
 }
