--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -641,6 +641,13 @@ header {
     &_star{
         color: $font-color-black;
     }
+    &_err_msg{
+        position: absolute;
+        top: -35%;
+        left: 5%;
+        font-family: 'PT Sans', sans-serif;
+        color: orangered;
+    }
     &_textarea-wrap{
         position: relative;
         width: 100%;
@@ -648,6 +655,10 @@ header {
         .contact_placeholder{
             top: 20%;
             left: 3%;
+        }
+        .contact_err_msg {
+            top: -10%;
+            left: 2.5%;
         }
     }
     &_textarea{
@@ -763,6 +774,35 @@ header {
             }
         }
     }
+    &_alert {
+        width: 300px;
+        height: 150px;
+        border-radius: 4px;
+        text-align: center;
+        font-family: 'PT Sans', sans-serif;
+        text-transform: uppercase;
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        -webkit-transform: translate(-50%, -50%);
+            -ms-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%);
+        padding-top: 70px;
+        -webkit-backdrop-filter: blur(3px);
+                backdrop-filter: blur(3px);
+
+        &#error {
+            border: 2px solid #e91f29;
+            background: rgba($color: rgb(228, 62, 62), $alpha: .4);
+            display: none;
+        }
+
+        &#done {
+            border: 2px solid #1fe973;
+            background: rgba($color: rgb(68, 226, 139), $alpha: .4);
+            display: none;
+        }
+    }
 }
 
 .contact_input:focus+
@@ -774,6 +814,12 @@ header {
 .contact_textarea:not(:placeholder-shown)+
 .contact_textarea{
     display: none;
+}
+
+.has_err{
+    input, textarea{
+        border-color: orangered;
+    }
 }
 
 .footer{
