--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -840,7 +840,7 @@ header {
         max-width: 1110px;
     }
     &_copy{
-        font-size: rm(18px);
+        font-size: rem(18px);
         color: $font-color-white;
         font-family: 'PT Sans', sans-serif;
     }
